--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,19 @@
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-blart
+
+  <div><%= f.label :first_name %><br />
+    <%= f.text_field :first_name %>
+  </div>
+  
+  <div><%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
+  </div>
+  
+  <div><%= f.label :informal_name %><br />
+    <%= f.text_field :informal_name %>
+  </div>
+  
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
