rails upped to 3.2.11

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") Agents
+          %a.brand(href="#")= app_name
           .container.nav-collapse
             =render :partial=>'layouts/nav'
 
