--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,24 +2,8 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| 
   = devise_error_messages!
 
-  = f.label :first_name
-  = f.text_field :first_name
+  = render :partial=>'devise/shared/frm_user', :locals=>{:f=>f}
   
-  = f.label :last_name
-  = f.text_field :last_name
-  
-  = f.label :informal_name
-  = f.text_field :informal_name
-  
-  = f.label :email
-  = f.email_field :email
-
-  = f.label :password 
-  = f.password_field :password
-
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
-
-  = f.submit "Sign up"
+  = f.submit "Sign up", :class=>'btn'
 
 = render "devise/shared/links"
